--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -569,6 +569,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e23c07c9",
+   "metadata": {},
+   "source": [
+    "### 1. 性別缺失值處理\n",
+    "<ul>\n",
+    "  <li>經觀察，女性數量非常少，但因無法確定缺失值為女性，故將缺失值補值為'unknown'</li>\n",
+    "</ul>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
    "id": "8eca7225",
@@ -583,15 +594,16 @@
    "id": "b5d58072",
    "metadata": {},
    "source": [
-    "### company_size 和 company_type 缺失值處理\n",
-    "<p>推測這些缺失值可能與學員的工作經驗狀況有高度關聯</p>\n",
-    "<p></p>\n",
-    "<p></p>"
+    "### 2. company_size 和 company_type 缺失值處理\n",
+    "<ul>\n",
+    "  <li>推測這些缺失值可能與學員的工作經驗狀況有高度關聯</li>\n",
+    "  <li>無相關經驗為28%，'company_size','company_size'的缺失值分別為29%與30%的比例，推測</li>\n",
+    "</ul>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "48e81b19",
    "metadata": {},
    "outputs": [
@@ -634,7 +646,7 @@
     "    df_origin.loc[df_origin['relevent_experience'] == 'No relevent experience', ['company_size', 'company_type']].fillna('No Experience')\n",
     "\n",
     "# 對於有相關經驗但公司資訊仍缺失的學員，填充為 'Not Specified' 或眾數\n",
-    "# 這裡我們仍建議使用 'Not Specified' 以保留未知資訊\n",
+    "# 這裡使用 'Not Specified' 以保留未知資訊\n",
     "df_origin['company_size']=df_origin['company_size'].fillna('Not Specified')\n",
     "df_origin['company_type']=df_origin['company_type'].fillna('Not Specified')\n",
     "\n",
